homepage done with woo-commerce setup

--- a/index.html
+++ b/index.html
@@ -86,48 +86,46 @@
 
     <!-- navbar -->
     <div class="max-w-[1140px] top-0 left-[-768px] md:hidden ease-in-out duration-300 bg-primary text-white z-[999] flex items-start justify-between fixed mx-auto p-6 w-3/4 h-full"
-    id="header">
-    <ul id="menu-navbar" class="space-y-4">
-        <li class="font-varela font-medium text-base text-white/90 hover:text-primary duration-300">
-            <a href="#">
-                Home
-            </a>
-        </li>
-        <li class="font-varela font-medium text-base text-white/90 hover:text-primary duration-300">
-            <a href="#">
-                About
-            </a>
-        </li>
-        <li class="font-varela font-medium text-base text-white/90 hover:text-primary duration-300">
-            <a href="#">
-                Us
-            </a>
-        </li>
-        <li class="font-varela font-medium text-base text-white/90 hover:text-primary duration-300">
-            <a href="#">
-                Product
-            </a>
-        </li>
-        <li class="font-varela font-medium text-base text-white/90 hover:text-primary duration-300">
-            <a href="#">
-                Blog
-            </a>
-        </li>
-        <li class="font-varela font-medium text-base text-white/90 hover:text-primary duration-300">
-            <a href="#">
-                Contact
-            </a>
-        </li>
-    </ul>
+        id="header">
+        <ul id="menu-navbar" class="space-y-4">
+            <li>
+                <a href="#Home" class="font-varela font-medium text-base text-white/90 hover:text-white/75 duration-300">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="#About"
+                    class="font-varela font-medium text-base text-white/90 hover:text-white/75 duration-300">
+                    Aboutus
+                </a>
+            </li>
+            <li>
+                <a href="#Product"
+                    class="font-varela font-medium text-base text-white/90 hover:text-white/75 duration-300">
+                    Product
+                </a>
+            </li>
+            <li>
+                <a href="#Blog" class="font-varela font-medium text-base text-white/90 hover:text-white/75 duration-300">
+                    Blog
+                </a>
+            </li>
+            <li>
+                <a href="#Contact"
+                    class="font-varela font-medium text-base text-white/90 hover:text-white/75 duration-300">
+                    Contact
+                </a>
+            </li>
+        </ul>
 
-    <button id="hide_header">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 12L7 7M12 12L17 17M12 12L17 7M12 12L7 17" stroke="white" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round" />
-        </svg>
-    </button>
-</div>
-
+        <button id="hide_header">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 12L7 7M12 12L17 17M12 12L17 7M12 12L7 17" stroke="white" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+        </button>
+    </div>
+    
     <header class="fixed top-0 left-0 right-0 z-[99] duration-300" id="desktop_header">
         <nav>
             <div class="container z-20 relative mx-auto py-5 ease-in-out duration-300">
@@ -146,12 +144,14 @@
 
                     <ul id="menu-navbar-1" class="hidden md:flex items-center gap-x-4 lg:gap-x-16">
                         <li>
-                            <a href="#Home" class="font-varela font-medium text-base text-black/60 hover:text-primary duration-300">
+                            <a href="#Home"
+                                class="font-varela font-medium text-base text-black/60 hover:text-primary duration-300">
                                 Home
                             </a>
                         </li>
                         <li>
-                            <a href="#About" class="font-varela font-medium text-base text-black/60 hover:text-primary duration-300">
+                            <a href="#About"
+                                class="font-varela font-medium text-base text-black/60 hover:text-primary duration-300">
                                 About Us
                             </a>
                         </li>
@@ -162,7 +162,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#Blog" class="font-varela font-medium text-base text-black/60 hover:text-primary duration-300">
+                            <a href="#Blog"
+                                class="font-varela font-medium text-base text-black/60 hover:text-primary duration-300">
                                 Blog
                             </a>
                         </li>
@@ -492,7 +493,7 @@
                     <div
                         class="border-4 border-secondary/0 group-hover:border-primary duration-300 inline-block rounded-full">
                         <img width="100%" height="100%" loading="lazy" class="w-full object-contain max-w-24 mx-auto"
-                            src="assets/image/png&jpg/image1.png"alt="user" />
+                            src="assets/image/png&jpg/image1.png" alt="user" />
                     </div>
                     <p class="font-lato font-normal text-base text-black/60">
                         Practicing yoga regularly has improved my
