update server home

--- a/index.html
+++ b/index.html
@@ -380,13 +380,13 @@
                             src="assets/image/png&jpg/best-seller-1.jpg" alt="courses" />
                     </a>
                     <div
-                        class="bg-white shadow-md rounded-xl max-w-[380px] mx-auto p-6 relative -translate-y-1/4 space-y-2">
+                        class="bg-white shadow-md rounded-xl max-w-[380px] mx-auto p-6 relative -mt-16 space-y-2">
                         <h4 class="font-varela font-bold text-lg text-black/75">
                             <a href="#productlink">
                                 Hatha Yoga
                             </a>
                         </h4>
-                        <p class="font-lato font-normal text-base text-black/60">
+                        <p class="font-lato font-normal text-base text-black/60 line-clamp-2">
                             Yoga is a holistic practice that combines the
                             body, breath, and mind to improve overall
                             health. </p>
@@ -400,13 +400,13 @@
                             src="assets/image/png&jpg/best-seller-2.jpg" alt="courses" />
                     </a>
                     <div
-                        class="bg-white shadow-md rounded-xl max-w-[380px] mx-auto p-6 relative -translate-y-1/4 space-y-2">
+                        class="bg-white shadow-md rounded-xl max-w-[380px] mx-auto p-6 relative -mt-16 space-y-2">
                         <h4 class="font-varela font-bold text-lg text-black/75">
                             <a href="#productlink">
                                 Hatha Yoga
                             </a>
                         </h4>
-                        <p class="font-lato font-normal text-base text-black/60">
+                        <p class="font-lato font-normal text-base text-black/60 line-clamp-2">
                             Yoga is a holistic practice that combines the
                             body, breath, and mind to improve overall
                             health. </p>
@@ -420,13 +420,13 @@
                             src="assets/image/png&jpg/best-seller-3.jpeg" alt="courses" />
                     </a>
                     <div
-                        class="bg-white shadow-md rounded-xl max-w-[380px] mx-auto p-6 relative -translate-y-1/4 space-y-2">
+                        class="bg-white shadow-md rounded-xl max-w-[380px] mx-auto p-6 relative -mt-16 space-y-2">
                         <h4 class="font-varela font-bold text-lg text-black/75">
                             <a href="#productlink">
                                 Hatha Yoga
                             </a>
                         </h4>
-                        <p class="font-lato font-normal text-base text-black/60">
+                        <p class="font-lato font-normal text-base text-black/60 line-clamp-2">
                             Yoga is a holistic practice that combines the
                             body, breath, and mind to improve overall
                             health. </p>
